[gd_scene load_steps=2 format=3 uid="uid://c7bs4mvdrjhbt"]

[ext_resource type="Script" path="res://LP4-2.gd" id="1_55e4b"]

[node name="LP4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_55e4b")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 32.0
offset_right = 171.063
offset_bottom = 63.0
scale = Vector2(1.10928, 0.751569)

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 56.0
offset_right = 171.063
offset_bottom = 87.0
scale = Vector2(1.10928, 0.751569)

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 80.0
offset_right = 171.063
offset_bottom = 111.0
scale = Vector2(1.10928, 0.751569)

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 104.0
offset_right = 171.063
offset_bottom = 135.0
scale = Vector2(1.10928, 0.751569)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(1.0651, 0.963143)
text = "Enter
length(cm)
width(cm)
Height()cm
weight(Kg)"

[node name="label2" type="Label" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 8.0
offset_right = 269.0
offset_bottom = 138.0
scale = Vector2(3.00885, 0.894464)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_top = 136.0
offset_right = 80.0
offset_bottom = 167.0
scale = Vector2(3.47601, 3.48528)
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_top = 248.0
offset_right = 80.0
offset_bottom = 279.0
scale = Vector2(3.47601, 3.48528)
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 352.0
offset_right = 88.0
offset_bottom = 383.0
scale = Vector2(3.47601, 3.48528)
text = "Exit"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
